# relion2dynamo

./: .gitignore  README.md  dynamotable2motl.m  pyproject.toml  setup.py
relion2dynamo/: __init__.py  relion2dynamo.py  utils.py
src/relion2dynamo/: __init__.py  _io_converter.py  _version.py  relion2dynamo.py
src/relion2dynamo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_data/: 4_1.star  4_1.tbl  refine.star
